# advent_of_code_2021

./: Cargo.toml
.github/workflows/: rust.yml
benches/: aoc_bench.rs
src/: error.rs  main.rs  solutions.rs
src/solutions/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.rs  day21.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
